# opensk

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: run-tests.yml
cmake-build/Windows/default/debug/components/include/opensk/: config_def.hpp
components/: CMakeLists.txt
components/cmake/: compile_flags.cmake  external.cmake  opensk.cmake
components/dummy/: CMakeLists.txt
components/dummy/dummy_Tracy/: CMakeLists.txt
components/dummy/dummy_Tracy/common/: TracyApi.h  TracyColor.hpp  TracySystem.hpp
components/dummy/dummy_Tracy/tracy/: Tracy.hpp
components/engine/: CMakeLists.txt  main.cpp  read_options.hpp
components/opensk/: CMakeLists.txt  config.cpp  config.hpp  config.hpp.in  config_def.hpp.in  config_options.hpp  main.cpp  options.cpp  options.hpp  read_options.cpp  version.cpp  version.hpp
components/opensk/core/: create.hpp  engine.cpp  engine.hpp  exceptions.cpp  exceptions.hpp  frame.cpp  frame.hpp  runtime.cpp  runtime.hpp  runtime_arena.cpp  runtime_arena.hpp  settings.cpp  settings.hpp  task.cpp  task.hpp
components/opensk/frames/main_menu/: frame.cpp  frame.hpp  hello_task.cpp  hello_task.hpp
components/opensk/math/: point.hpp  r_tree.cpp  r_tree.hpp  rect.hpp
components/opensk/math/concepts/: point.hpp  rect.hpp
components/opensk/menu/: button.hpp  menu.cpp  menu.hpp  traits.hpp
components/opensk/phys/: cpu_dispatcher.cpp  cpu_dispatcher.hpp  error_callback.cpp  error_callback.hpp  exceptions.cpp  exceptions.hpp  manager.cpp  manager.hpp  pvd_client.cpp  pvd_client.hpp  scene.cpp  scene.hpp
components/resources/: opensk.conf
components/resources/settings/: hardware.ini
components/tests/: CMakeLists.txt  test_read_options.cpp
